--- a/Russian/main/LewaSystemClean.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaSystemClean.apk/res/values-ru/strings.xml
@@ -15,14 +15,14 @@
     <string name="clean_sdcard_thum_file_name">Файл миниатюры</string>
     <string name="app_install_location_title">Предпочитаемое место установки</string>
     <string name="default_memory_title">Память по умолчанию</string>
-    <string name="format_storage_title">Форматирование</string>
+    <string name="format_storage_title">Форматировать: %1$s</string>
     <string name="install_location_device">Внутренняя память</string>
     <string name="install_location_sd">%1$s(некоторые приложения не поддерживаются)</string>
     <string name="install_location_auto">На усмотрение системы</string>
     <string name="clear_data_title">Очистка мусора</string>
     <string name="calculate_now">Определение</string>
-    <string name="space_available">Доступно</string>
-    <string name="space_used">Исп. места</string>
+    <string name="space_available">"Свободно: "</string>
+    <string name="space_used">"Занято: "</string>
     <string name="category_application">Приложения</string>
     <string name="category_others">Прочее</string>
     <string name="autostarts_title">Автозагрузка</string>
@@ -55,9 +55,9 @@
     <string name="clean_app_cache_summary">"Кэш: "</string>
     <string name="clean_clear_complete_title">Очистка завершена</string>
     <string name="clean_clear_complete_summary2">места</string>
-    <string name="clean_calculate_size_title">Доступно места</string>
-    <string name="size_used">Использовано</string>
-    <string name="size_available">Доступно</string>
+    <string name="clean_calculate_size_title">Свободно места</string>
+    <string name="size_used">Занято</string>
+    <string name="size_available">Свободно</string>
     <string name="calculate_size_complete">Найдено к очистке: </string>
     <string name="calculate_size_incomplete">Еще к очистке </string>
     <string name="calculate_size_stop">Подсчет прекращен</string>
