--- a/Russian/main/Settings.apk/res/values-ru/strings.xml
+++ b/Russian/main/Settings.apk/res/values-ru/strings.xml
@@ -2640,6 +2640,23 @@
     <string name="notification_led_freq_title">Частота мигания уведомлений</string>
     <string name="incoming_call_led_freq_title">Частота мигания входящего вызова</string>
     <string name="mms_led_freq_title">Частота мигания SMS</string>
+    <string name="screen_gestures_settings_title">Умные жесты</string>
+    <string name="screen_gestures_operating_title">Умные жесты</string>
+    <string name="click_gesture">Пробуждение по двойному тапу</string>
+    <string name="c_gesture">Жест C</string>
+    <string name="e_gesture">Жест E</string>
+    <string name="w_gesture">Жест W</string>
+    <string name="o_gesture">Жест O</string>
+    <string name="m_gesture">Жест M</string>
+    <string name="s_gesture">Жест S</string>
+    <string name="z_gesture">Жест Z</string>
+    <string name="v_gesture">Жест V</string>
+    <string name="open_app_title">Название приложения</string>
+    <string name="gesture_open_app_title">Все приложения</string>
+    <string name="show_gesture_title">Жест</string>
+    <string name="gestures_click_title">Введение</string>
+    <string name="gestures_click_content">Двойной тап для пробуждения экрана</string>
+    <string name="gesture_app_null">Нет приложения, нажмите для его выбора</string>
     <string name="day">1 день</string>
     <string name="days">" %s дн."</string>
     <string name="hour">1 час</string>
