--- a/Russian/main/TeleService.apk/res/values-ru/strings.xml
+++ b/Russian/main/TeleService.apk/res/values-ru/strings.xml
@@ -927,4 +927,28 @@
     <string name="auto_voice_record_title">Автоматическая запись</string>
     <string name="yellowpage_title">Желтые страницы</string>
     <string name="yellowpage_summary">Отображение в подсказках быстрых номеров различных компаний и служб</string>
+    <string name="auto_phone_record_description">После запуска функции автозаписи, выбранный контакт или номер будет автоматически записываться</string>
+    <string name="record_range">Уровень автозаписи</string>
+    <string name="not_record_in_seconds">Вызовы не записываются в течение 10 секунд</string>
+    <string name="specific_contacts">Отдельные контакты</string>
+    <string name="strange_number_call">Все неизвестные номера</string>
+    <string name="common_public_number_call">Все публичные номера</string>
+    <string name="all_calls">Все вызовы</string>
+    <string name="maximum_recording_buffer">Максимальный рамер кэша</string>
+    <string name="max_phone_record_description">Записи хранятся в  папке /sdcard/Lewa/Voice_Record. Когда размер записи привысит размер кэша, автозапись будет остановлена</string>
+    <string name="please_use_larger_size">Текущий файл превысил размер кэша. Выберите больший размер кэша</string>
+    <string name="please_use_smaller_size">Размер свободного места меньше выбранного размера кэша</string>
+    <string name="empty_record_contacts">Нет контактов для автозаписи</string>
+    <string name="auto_record_contacts">Автозапись вызовов для контактов</string>
+    <string name="add_auto_record_contacts">Добавление в список автозаписи</string>
+    <string name="add_auto_record_contact_from_pim_toast">Добавлено в список автозаписи</string>
+    <string name="remove_auto_record_contact_from_pim_toast">Автозапись отменена</string>
+    <string name="add_auto_record_contact_toast">Выбранные контакты были добавлены в список автозаписи вызовов</string>
+    <string name="auto_record_contacts_size">%d конт.</string>
+    <string name="not_select_auto_record_contacts">Не выбрано</string>
+    <string name="not_set_auto_record_range">Не задано</string>
+    <string name="has_set_auto_record_range">Задано</string>
+    <string name="delete_select_auto_record_contacts">Удаление выбранных контактов</string>
+    <string name="delete_select_auto_record_contacts_confirm">Вы хотите удалить выбранные контакты из списка автозаписи вызовов?</string>
+    <string name="deleting">Удаление......</string>
 </resources>
