--- a/Russian/main/KeyChain.apk/res/values-ru/strings.xml
+++ b/Russian/main/KeyChain.apk/res/values-ru/strings.xml
@@ -8,5 +8,5 @@
     <string name="install_new_cert_message">Сертификаты можно установить из файла PKCS#12 с расширением %1$s или %2$s, находящемся на внешнем носителе</string>
     <string name="install_new_cert_button_label">Установить</string>
     <string name="allow_button">Разрешить</string>
-    <string name="deny_button">Отклонить</string>
+    <string name="deny_button">Запретить</string>
 </resources>
