--- a/Russian/main/LewaLauncherX.apk/res/values-ru/strings.xml
+++ b/Russian/main/LewaLauncherX.apk/res/values-ru/strings.xml
@@ -108,6 +108,10 @@
     <string name="server_game_recommend1">Рекомендуемые</string>
     <string name="server_game_recommend2">Пазлы</string>
     <string name="server_others_category">Разное</string>
+    <string name="server_lifestyle_house">Жилье</string>
+    <string name="server_lifestyle_trade">Торговля</string>
+    <string name="server_lifestyle_jop">Работа</string>
+    <string name="server_lifestyle_more">Другие услуги</string>
     <string name="app_recommend_title">Рекомендованное</string>
     <string name="confirm_smart_sort">Умная сортировка по папкам</string>
     <string name="restore_smart_sort">Восстановление сортированных приложений на рабочее место</string>
@@ -124,10 +128,10 @@
     <string name="download_failed_other">Загрузка не удалась, попробуйте позже</string>
     <string name="noti_install_success_text">Установка завершена, нажмите для запуска</string>
     <string name="noti_install_failed_text">Установка не удалась</string>
-    <string name="hidden_app_title">Скрытые</string>
+    <string name="hidden_app_title">Скрытые приложения</string>
     <string name="select_app_title">Выбор приложений</string>
-    <string name="no_hidden_apps">Нет приложений</string>
-    <string name="done">ОК</string>
+    <string name="no_hidden_apps">Нет скрытых приложений</string>
+    <string name="done">Готово</string>
     <string name="edit">Изменить</string>
     <string name="uninstall_done">Удаление завершено</string>
     <string name="uninstall_failed">Удаление не удалось</string>
