--- a/Russian/main/MediaProvider.apk/res/values-ru/strings.xml
+++ b/Russian/main/MediaProvider.apk/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="ringtone_custom">Пользовательский...</string>
     <string name="not_audio_files">Это не аудио-файл</string>
     <string name="uid_label">Мультимедиа</string>
-    <string name="app_label">Хранилище медиа</string>
+    <string name="app_label">Хранилище мультимедиа</string>
     <string name="upgrade_msg">Обновление базы данных мультимедиа...</string>
     <string name="artist_label">Исполнитель</string>
 </resources>
